Fix: fix map overlap error after search 스크랩 검색 후 나눔카드 태그에 이전 경로추천글 지도가 겹치는 현상 수정

--- a/src/styles/mypage/MyPageRecommend.css
+++ b/src/styles/mypage/MyPageRecommend.css
@@ -45,7 +45,6 @@
   height:100%;
   background-color: gray;
   border-radius: 10px 0 0 10px;
-  object-fit: contain;
 }
 
 
